# ChangeLog for gnome-extra/nautilus-tracker-tags
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/nautilus-tracker-tags/ChangeLog,v 1.1 2011/11/02 16:24:23 tetromino Exp $

*nautilus-tracker-tags-0.12.7 (02 Nov 2011)

  02 Nov 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
  +files/0.12.5-Makefile, +nautilus-tracker-tags-0.12.7.ebuild, +metadata.xml:
  New package from the gnome-overlay, split off from app-misc/tracker in order
  to avoid circular dependencies with nautilus[tracker]. For simplicity and
  build speed, it uses a custom makefile (most of tracker's build
  infrastructure is unnecessary for building the nautilus extension).
