@@ -1,6 +1,12 @@
 # ChangeLog for gnome-extra/nautilus-tracker-tags
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/nautilus-tracker-tags/ChangeLog,v 1.1 2011/11/02 16:24:23 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/nautilus-tracker-tags/ChangeLog,v 1.2 2011/11/26 19:27:56 tetromino Exp $
+
+*nautilus-tracker-tags-0.12.8 (26 Nov 2011)
+
+  26 Nov 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
+  +nautilus-tracker-tags-0.12.8.ebuild:
+  Version bump.
 
 *nautilus-tracker-tags-0.12.7 (02 Nov 2011)
 
